# IEEE_SB_Passau_advent_2017

./: .gitignore  01_advanced_rot.py  02_fizz_buzz.py  03_a_cube_of_presents.py  03_a_cube_of_presents_minimal.py  04_professor_krawinkels_barn.py  05_christmas_garland_decorating.py  06_pressure_in_the_printing_press.cc  07_more_space_for_santa.py  22_light_string.py  CMakeLists.txt  README.md
samples/: 02.1_input.txt  04.1_input.txt  05.1_input.txt  05.2_input.txt  05.3_input.txt  06.1_input.txt  07.1_output.txt  23.1_input.txt
